# simple-genie

./: .gitmodules  CMakeLists.txt  MyGenie.cpp  MyGenie.h  data.cpp  data.h  ids.h  qt-genie.qrc  simple-cffi.lisp  simple.cpp  simple.h
resources/: class.txt  units.txt  whitelist.txt
